--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.22MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.04MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20009, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-178.0KB/s(Youtube:不良林), server: data-hk-v2.shwjfkw.cn, port: 50205, type: vmess, uuid: b1478e24-4916-3abe-8f17-15931012ecbe, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: data-hk-v2.shwjfkw.cn}}
-  - {name: 🇯🇵 日本-5.09MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇳🇱 荷兰-2.54MB/s(Youtube:不良林), server: 213.183.59.206, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-2.87MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
-  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.30MB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.60MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32453, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-438.8KB/s(Youtube:不良林), server: 213.183.59.214, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇸🇬 新加坡-1.51MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.31MB/s(Youtube:不良林), server: 213.183.53.177, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇨🇳 中国-1.25MB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇳🇱 荷兰-404.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇷🇺 俄罗斯联邦-550.9KB/s(Youtube:不良林), server: 213.183.53.208, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇸🇬 新加坡-532.6KB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-834.6KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-4.12MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-438.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-404.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-550.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-532.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-834.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-438.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-404.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-550.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-532.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-834.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-438.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-404.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-550.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-532.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-834.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-834.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-438.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-404.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-550.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-532.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-834.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-438.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-404.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-550.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-532.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-834.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-438.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-404.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-550.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-532.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-834.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.60MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-438.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-404.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-550.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-532.6KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-834.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
