--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-438.8KB/s(Youtube:不良林), server: 213.183.59.214, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇸🇬 新加坡-1.51MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.31MB/s(Youtube:不良林), server: 213.183.53.177, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇨🇳 中国-1.25MB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇳🇱 荷兰-404.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇷🇺 俄罗斯联邦-550.9KB/s(Youtube:不良林), server: 213.183.53.208, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇸🇬 新加坡-532.6KB/s(Youtube:不良林), server: w12.udpgw.com, port: 443, type: trojan, password: 08964210-e7b8-11ec-95aa-1239d0255272, sni: w12.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-834.6KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-4.12MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.28MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.85MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.75MB/s(Youtube:不良林), server: 116.129.253.201, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.98MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林), server: 213.183.53.177, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇨🇳 中国-2.83MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-802.9KB/s(Youtube:不良林), server: 213.183.59.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇳🇱 荷兰-537.3KB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林), server: 213.183.53.177, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-438.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-404.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-550.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-532.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-834.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-802.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-537.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-438.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-404.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-550.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-532.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-834.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-802.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-537.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-438.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-404.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-550.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-532.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-834.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-802.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-537.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-834.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-438.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-404.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-550.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-532.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-834.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-802.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-537.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-438.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-404.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-550.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-532.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-834.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-802.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-537.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-438.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-404.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-550.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-532.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-834.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-802.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-537.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-438.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.25MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-404.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-550.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-532.6KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-834.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.98MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.83MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.38MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-802.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-537.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.61MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
