--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.96MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.17MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.15MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.63MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.78MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.48MB/s(Youtube:不良林), server: us1.nodegz.top, port: 443, type: trojan, password: 415a81c2-8a5c-37d1-8558-200be3c9cca9, sni: us1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-838.6KB/s(Youtube:不良林), server: blr.alinkrelay.com, port: 12000, type: trojan, password: 2a65c21b-5e04-4fb2-86d8-53cc1f456dfb, sni: blr.alinkrelay.com, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-507.8KB/s(Youtube:不良林), server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇺🇸 美国-302.3KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.62MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.98MB/s(Youtube:不良林), server: 116.129.253.230, port: 16208, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.92MB/s(Youtube:不良林), server: 120.233.29.189, port: 16245, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: 120.233.29.189, port: 16225, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.83MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-401.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇨🇳 中国-758.2KB/s(Youtube:不良林), server: scloud28.jafiyun.life, port: 22028, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud28.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-10.81MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-482.3KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇳🇱 荷兰-359.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-838.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-401.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-758.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-838.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-401.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-758.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-838.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-401.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-758.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-838.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-401.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-758.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-838.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-401.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-758.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-838.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-401.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-758.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.17MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.48MB/s(Youtube:不良林)
-      - 🇮🇳 印度-838.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-507.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-401.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-758.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
