--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.98MB/s(Youtube:不良林), server: 116.129.253.230, port: 16208, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.92MB/s(Youtube:不良林), server: 120.233.29.189, port: 16245, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: 120.233.29.189, port: 16225, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.83MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-401.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇨🇳 中国-758.2KB/s(Youtube:不良林), server: scloud28.jafiyun.life, port: 22028, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud28.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-4.54MB/s(Youtube:不良林), server: 36.134.154.119, port: 16224, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.08MB/s(Youtube:不良林), server: 116.129.253.230, port: 16119, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.02MB/s(Youtube:不良林), server: 120.233.29.189, port: 16113, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.83MB/s(Youtube:不良林), server: 116.129.253.230, port: 16111, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.32MB/s(Youtube:不良林), server: 116.129.253.230, port: 16209, type: vmess, uuid: c22a2a6c-fe01-3532-9071-7cb5d37b5bb7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-10.81MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-482.3KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
   - {name: 🇳🇱 荷兰-359.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇳🇱 荷兰-831.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇳🇱 荷兰-452.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-401.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-452.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-401.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-452.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-401.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-452.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-401.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-452.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-401.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-452.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-401.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-452.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-401.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-758.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-10.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-482.3KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-359.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-831.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-452.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
